Добавление описаний новыйх ручек Добавление генерации тега users в makefile
